# array-api-shape-check

./: .all-contributorsrc  .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 1-bug-report.yml  2-feature-request.yml  config.yml
docs/: conf.py  index.md  installation.md  usage.md
src/array_api_shape_check/: __init__.py  _main.py
tests/: test_main.py
