[build-system]
build-backend = "setuptools.build_meta"
requires = [ "setuptools>=77.0.3" ]

[project]
name = "array-api-shape-check"
version = "0.1.3"
description = "Check shapes of input arrays easily"
readme = "README.md"
license = "MIT"
authors = [
  { name = "34j", email = "34j.95a2p@simplelogin.com" },
]
requires-python = ">=3.12"
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Software Development :: Libraries",
]
dependencies = [
  "attrs>=26.1",
  "more-itertools>=11.0.2",
  "numpy>=2.4.4",
  "types-array-api>=1.1.4",
]
urls."Bug Tracker" = "https://github.com/34j/array-api-shape-check/issues"
urls.Changelog = "https://github.com/34j/array-api-shape-check/blob/main/CHANGELOG.md"
urls.documentation = "https://array-api-shape-check.readthedocs.io"
urls.repository = "https://github.com/34j/array-api-shape-check"

[dependency-groups]
dev = [
  "coverage",
  "numpy>=2.4.4",
  "pytest==9.*",
  "pytest-cov==7.*",
  "sybil[pytest]",
  "ty",
]
docs = [
  "furo; python_version>='3.12'",
  "myst-parser; python_version>='3.12'",
  "sphinx==9.*; python_version>='3.12'",
  "sphinx-autobuild; python_version>='3.12'",
]

[tool.ruff]
line-length = 100
preview = true
format.docstring-code-format = true
lint.select = [
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "D",   # flake8-docstrings
  "E",   # pycodestyle
  "F",   # pyflake
  "I",   # isort
  "RUF", # ruff specific
  "S",   # flake8-bandit
  "UP",  # pyupgrade
  "W",   # pycodestyle
]
lint.ignore = [
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D107", # Missing docstring in `__init__`
  "D203", # 1 blank line required before class docstring
  "D212", # Multi-line docstring summary should start at the first line
  "D401", # First line of docstring should be in imperative mood
]
lint.per-file-ignores."conftest.py" = [ "D100" ]
lint.per-file-ignores."docs/conf.py" = [ "D100" ]
lint.per-file-ignores."setup.py" = [ "D100" ]
lint.per-file-ignores."tests/**/*" = [
  "D100",
  "D101",
  "D102",
  "D103",
  "D104",
  "S101",
]
lint.isort.known-first-party = [ "array_api_shape_check", "tests" ]

[tool.pyproject-fmt]
max_supported_python = "3.14"

[tool.ty]
terminal.error-on-warning = true
src.exclude = [ "docs/" ]

[tool.pytest]
minversion = "9.0"
addopts = [
  "-v",
  "-Wonce",
  "-p no:doctest",
  "--cov=array_api_shape_check",
  "--cov-report=term",
  "--cov-report=xml",
]
pythonpath = [ "src" ]

[tool.coverage]
run.branch = true
paths.source = [
  "src",
  ".tox/**/site-packages",
]
report.exclude_lines = [
  "@overload",
  'if __name__ == "__main__":',
  "if TYPE_CHECKING",
  "pragma: no cover",
  "raise NotImplementedError",
]

[tool.semantic_release]
allow_zero_version = true
version_toml = [ "pyproject.toml:project.version" ]
version_variables = [
  "src/array_api_shape_check/__init__.py:__version__",
  "docs/conf.py:release",
]
build_command = """
pip install uv
uv lock
git add uv.lock
uv build
"""
branches.main.match = "main"
branches.noop.match = "(?!main$)"
branches.noop.prerelease = true
changelog.exclude_commit_patterns = [
  "chore(?:\\([^)]*?\\))?: .+",
  "ci(?:\\([^)]*?\\))?: .+",
  "refactor(?:\\([^)]*?\\))?: .+",
  "style(?:\\([^)]*?\\))?: .+",
  "test(?:\\([^)]*?\\))?: .+",
  "build\\((?!deps\\): .+)",
  "Merged? .*",
  "Initial [Cc]ommit.*",         # codespell:ignore
]
changelog.environment.keep_trailing_newline = true
